Fixed project references

--- a/PUPHubPoints.csproj
+++ b/PUPHubPoints.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="PointsBusinessRules\**" />
+    <Compile Remove="PointsDataLayer\**" />
+    <EmbeddedResource Remove="PointsBusinessRules\**" />
+    <EmbeddedResource Remove="PointsDataLayer\**" />
+    <None Remove="PointsBusinessRules\**" />
+    <None Remove="PointsDataLayer\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="PointsBusinessRules\PointsBusinessRules.csproj" />
+    <ProjectReference Include="PointsDataLayer\PointsDataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
