--- a/PointsDataLayer/PointsDataLayer.csproj
+++ b/PointsDataLayer/PointsDataLayer.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\PUPHubModels\PUPHubModels.csproj" />
+  </ItemGroup>
+
 </Project>
