Added Redeemable Products and Services, Removed InMemory Data.
Removed memory dummy data, so the datasources are now from JsonFile (student) and Database (StudentPoints)
Also added Redeemable Products and Services

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+PUPHubPointsClient - Backup.csproj
+PUPHubPointsDataServices/PUPHubPointsDataServices.csproj
+PUPHubPointsDataServices/PUPHubPointsDataServices.csproj
