--- a/PUPHubPointsModels/PUPHubPointsModels.csproj
+++ b/PUPHubPointsModels/PUPHubPointsModels.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,6 +10,7 @@
         <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
         <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
         <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+	  <BaseOutputPath>C:\Users\indaleen\source\repos\2223-1\PUPHubPoints\bin\Debug\net5.0</BaseOutputPath>
   </PropertyGroup>
 
 </Project>
